--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
+@import 'tailwindcss';
+
 * {
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   width: 100%;
